# portfolio

./: .env.example  .gitignore  .gitmodules  Makefile  docker-compose-prod.yml  docker-compose.dev.yml  docker-compose.yml
.devcontainer/backend/: devcontainer.json  docker-compose.yml
.devcontainer/nuxt/: devcontainer.json  docker-compose.yml
.github/workflows/: ci.yml  cleanup.yml  deploy.yml  local_actions.yml
backend/: Dockerfile  Dockerfile_uv  Dockerfile_uv_sample  Dockerfile_uv_test  Makefile  coverage.xml  pyproject copy.toml  pyproject.toml
backend/src/: app.py  configs.py  exceptions.py  logging_config.py  logging_config.yaml  main.py
backend/src/api/: dao.py  schemas.py
backend/src/arepl/: arepl.py  arepl_faker.py  arepl_jwt.py  arepl_pyzbar.py  arepl_schemas.py  arepl_sqlalchemy.py
backend/src/bot/: create_bot.py
backend/src/bot/handlers/: admin_router.py  user_router.py
backend/src/bot/keyboards/: kbs.py
backend/src/bot/utils/: utils.py
backend/src/dao/: base.py
backend/src/users/: auth.py  dao.py  dependencies.py  models.py  router.py  schemas.py  utils.py
backend/src/utils/: cv_scaner.py  decorators.py  image_merger.py  pdf_to_img.py  pil2cv.py  proverka_checka.py  scan_qr_from_pdf.py  tg_qr_handlers.py  utils.py
backend/tests/: __init__.py  conftest.py  db.py
backend/tests/main/: conftest.py  factories.py  test_sql.py
backend/tests/main/aiogram/: conftest.py  mocked_bot.py  test_aiogram.py  test_user_router.py
backend/tests/mocks/: ofd_responses.py
backend/tests/mocks/faker_providers/: ofd.py
backend/tests/utils/: test_qr_scaner.py  test_utils.py
database/: alembic.ini  database.py  models.py
database/migrations/: env.py
database/migrations/versions/: 2025_04_18_1907__6f809c8d059d-ofd.py  2025_08_14_1855__5ff0e43a445b-remove_unused_models.py  2025_08_14_1859__995634cfefdd-create_users_table.py  5257a71e1ea9_initial_revision.py
docker/: Dockerfile  Dockerfile_act  Dockerfile_ms  Dockerfile_test  docker-compose-test.yml
nginx/: default.conf
nuxt/: Dockerfile  Dockerfile_prod  content.config.ts  eslint.config.mjs  nuxt.config.ts  package-lock.json  package.json  tailwind.config.js
nuxt/app/: app.config.ts  app.vue  error.vue
nuxt/app/assets/css/: main.css  primevue-overrides.css  prose.css
nuxt/app/components/: AppFooter.vue  AppHeader.vue  ColorModeButton.vue  PolaroidItem.vue
nuxt/app/components/blog/: ArticleList.vue  TagList.vue
nuxt/app/components/content/: Alert.vue  Danger.vue  Section.vue  Success.vue  Warning.vue
nuxt/app/components/landing/: About.vue  Blog.vue  FAQ.vue  Hero.vue  Testimonials.vue  WorkExperience.vue
nuxt/app/composables/: useApi.ts  useAuth.ts  useIntersectionObserver.ts  useScrollTo.ts
nuxt/app/data/: resume.ts
nuxt/app/layouts/: default.vue
nuxt/app/middleware/: auth.global.ts
nuxt/app/pages/: about.vue  index.vue  login.vue  projects.vue  resume.vue  speaking.vue
nuxt/app/themes/: mytheme.js  mytheme.ts
nuxt/app/utils/: clipboard.ts  links.ts
nuxt/content/: about.yml  blog.yml  index.yml  projects.yml  speaking.yml
nuxt/content/blog/: 2025-08-25-sse.md  2025-08-27-optimization.md  2025-08-29-api.md  2025-09-02-logs.md  2025-09-03-neovim.md  2025-09-05-rust.md  2025-09-08-postgresql.md  2025-09-23-nuxt.md  2025-10-15-ios_pointer.md  _draft__pointer.md  hello.md  ios-pointer-mdc.md  ios-pointer-variant-a.md  ios-pointer-variant-b.md  ios-pointer-variant-c.md
nuxt/content/common/: resume copy.md
nuxt/content/projects/: bloom-finance.yml  ecotrack.yml  internal-developer-hub.yml  wavelength-music.yml
nuxt/server/api/: contact.post.ts
nuxt/transformers/: sections.ts  test.ts  title-suffix.ts
(+27 files in other folders)
